[package]
name = "fhe-image-processing"
version = "0.1.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Fully homomorphic encryption image processing"
license = "MIT"
publish = false

[dependencies]
tfhe = { version = "0.2.4", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }