[package]
name = "fhe-image-processing"
version = "0.1.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Fully homomorphic encryption image processing"
license = "MIT"
publish = false

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
tfhe = { version = "0.2.4", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }