[package]
name = "fheip"
version = "0.5.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Fully homomorphic encryption image processing"
license = "MIT"
publish = false

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = "1.0.144"
bincode = "1.3.3"
png = "0.17.2"
clap = { version = "4.3.5", features = ["derive"] }
tfhe = { version = "0.2.4", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }